# sparrow

./: .gitattributes  CMakeLists.txt  LICENSE  LICENSES_THIRD_PARTY  README.md  README.org
.github/workflows/: c-cpp.yml  release.yml  tests.yml
include/: core.h  log.h  log.hpp  utils.h
res/shaders/: triangle.frag.glsl  triangle.vert.glsl
src/: core.c  core.cpp  log.c  log.cpp  main.c  main.cpp  stb_impl.c  stb_impl.cpp  utils.c
tests/: CMakeLists.txt  test.cpp
tests/src/: main.cpp
